Fix buttons on firefox

--- a/views/DashboardView/style.less
+++ b/views/DashboardView/style.less
@@ -17,6 +17,8 @@
         transform: translate(26px, -8.5px) rotate(315deg);
         width: 2.5em;
         & > div {
+          width: -webkit-fit-content;
+          width: -moz-fit-content;
           width: fit-content;
           border-bottom: 1px solid @separatorColor;
         }
