--- a/views/GlossaryView/style.less
+++ b/views/GlossaryView/style.less
@@ -3,6 +3,8 @@
 .GlossaryView {
   .button {
     width: 100%;
+    min-width: -webkit-fit-content;
+    min-width: -moz-fit-content;
     min-width: fit-content;
   }
   &.unfocused {
